--- a/tpms_generator_gui.ui
+++ b/tpms_generator_gui.ui
@@ -815,7 +815,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Developed by Albert Forés Garriga, Hector Garcia de la Torre, Giovanni Gómez Gras and Marco A. Pérez Martínez</string>
+        <string>Developed by Albert Forés Garriga, Héctor Garcia de la Torre, Giovanni Gómez Gras and Marco A. Pérez Martínez</string>
        </property>
       </widget>
      </item>
